[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Patrick Nobbe"]
edition = "2024"
default-run = "advent_of_code"
publish = false

[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]
# template dependencies
chrono = { version = "0.4", optional = true }
dhat = { version = "0.3", optional = true }
pico-args = "0.5"
tinyjson = "2.5"

# solution dependencies
good_lp = { version = "1.8", features = ["minilp"], default-features = false }
